[package]
name = "banyan-cli2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
client = [
    "reqwest", 
    "tokio", 
    "serde_json", 
    "tracing-subscriber", 
    "tracing-appender",
    "tracing",
    "clap", "serde"
    ]
server = ["hyper", "tokio"]


[dependencies]
clap = { version = "4.5.1", optional = true, features = ["derive"]}
reqwest = { version = "0.11", optional = true }
hyper = { version = "1.2.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = ["env-filter", "fmt", "time", "json", "ansi"] }
tracing-appender = { version = "0.2.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"]}

[[bin]]
name = "banyan-cli"
path = "src/client-main.rs"
required-features = ["client"]

[[bin]]
name = "banyan-daemon"
path = "src/server-main.rs"
required-features = ["server"]
